# Theory

./: .gitignore  CMakeLists.txt  FINAL_VERIFICATION_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  TheoryFinalProject.cpp  TheoryFinalProject.sln  TheoryFinalProject.vcxproj  TheoryFinalProject.vcxproj.filters  TheoryGUI_single.cpp  build_instructions.md
code/automaton/: automaton.cpp  automaton.h
code/lexer/: lexer.cpp  lexer.h
code/parser/: parser.cpp  parser.h
code/semantic/: semantic.cpp  semantic.h
